Changelog of all the versions of AndroidStatus
----------------------------------------------

0.1
 * Initial release

0.2
 * Improved XML parsing
 * Added more status text updates
 * Switched to use HttpURLConnection, allows for read and connect timeouts
 * Moved status strings to strings.xml
 * Added connect & read timeouts to host class
 * Added ability to enter in userid for web banner on reefangel.com
 * Added ability to choose to query controller directly or reefangel.com for values
 
 0.3
 * store controller values inside a database
 * added history menu that displays previous 30 status updates
 * database is limited to only keeping 30 status updates
 * BufferedReader has 8K initialization
 * Switched connection reader to use StringBuilder instead of just appending to a single String
 * added error status summary to update line on error
 * improved error handling
 * update the screen after changing preferences