@@ -22,3 +22,4 @@ Changelog of all the versions of AndroidStatus
  * added error status summary to update line on error
  * improved error handling
  * update the screen after changing preferences
+ * use styles with the layout for consistent look and easier to update values
